defining the color palette

--- a/index.html
+++ b/index.html
@@ -8,5 +8,14 @@
     <link rel="stylesheet" href="/css/normalize.css" />
     <link rel="stylesheet" href="/css/styles.css" />
   </head>
-  <body></body>
+  <body>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt quis
+      adipisci optio, veniam tempora quidem ipsum doloremque deserunt, enim
+      totam assumenda architecto qui et sapiente ex, non quo molestias.
+      Molestiae dignissimos ea odio fuga omnis magnam eligendi fugiat quasi,
+      nemo praesentium dolorum, aspernatur voluptatum beatae at, deserunt
+      voluptatibus! Cumque, sequi.
+    </p>
+  </body>
 </html>
