--- a/index.html
+++ b/index.html
@@ -5,17 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/css/normalize.css" />
     <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
+    <h1>Heading 1</h1>
+    <h2>Heading 2</h2>
+    <h3>Heading 3</h3>
     <p>
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt quis
-      adipisci optio, veniam tempora quidem ipsum doloremque deserunt, enim
-      totam assumenda architecto qui et sapiente ex, non quo molestias.
-      Molestiae dignissimos ea odio fuga omnis magnam eligendi fugiat quasi,
-      nemo praesentium dolorum, aspernatur voluptatum beatae at, deserunt
-      voluptatibus! Cumque, sequi.
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic iure
+      doloribus earum, quae temporibus rem dolores eos qui error! Ut.
     </p>
   </body>
 </html>
