partial build of input groups

--- a/index.html
+++ b/index.html
@@ -14,5 +14,14 @@
     <link rel="stylesheet" href="/css/normalize.css" />
     <link rel="stylesheet" href="/css/styles.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="input--group">
+      <input
+        type="text"
+        class="input"
+        placeholder="Enter Placeholder Here..."
+      />
+      <button class="btn btn--accent">Button Name</button>
+    </div>
+  </body>
 </html>
