--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zzx">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
+    <meta
+      name="Moshify"
+      content="Go online by hosting your site for as little as $9 in 
+      under 60 seconds. Fast and reliable web hosting from Moshify"
+    />
+    <meta property="og:title" content="Moshify..." />
+    <meta property="og:description" content="Website" />
+    <meta property="og:type" content="Website" />
+    <meta property="og:image" content="https://" />
+    <meta property="og:url" content="moshified.com..." />
+    <title>Moshify</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -13,6 +23,7 @@
     />
     <link rel="stylesheet" href="/css/normalize.css" />
     <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body>
     <nav class="nav collapsible collapsible--expanded">
@@ -146,9 +157,9 @@
       </p>
     </header>
 
-    <section class="block container">
+    <div class="block container">
       <article class="grid grid--1x2 features--article">
-        <div class="feature__content">
+        <div class="feature__content" data-aos="fade-left">
           <span class="icon-container"
             ><svg class="icon">
               <use xlink:href="/images/sprite.svg#easy"></use>
@@ -162,7 +173,7 @@
           </p>
           <a href="#" class="link-arrow">learn more</a>
         </div>
-        <picture class="feature__content">
+        <picture class="feature__content" data-aos="fade-right">
           <source
             type="image/webp"
             srcset="images/easy.webp 1x, images/easy@2x.webp 2x"/>
@@ -173,11 +184,11 @@
           <img src="/images/easy.jpg" alt=""
         /></picture>
       </article>
-    </section>
+    </div>
 
-    <section class="block container">
+    <div class="block container">
       <article class="grid grid--1x2 features--article">
-        <picture class="feature__content">
+        <picture class="feature__content" data-aos="fade-left">
           <source
             type="image/webp"
             srcset="images/fast.webp 1x, images/fast@2x.webp 2x"/>
@@ -188,7 +199,7 @@
           <img src="/images/fast.jpg" alt=""
         /></picture>
 
-        <div class="feature__content">
+        <div class="feature__content" data-aos="fade-right">
           <span class="icon-container"
             ><svg class="icon">
               <use xlink:href="/images/sprite.svg#computer"></use>
@@ -203,11 +214,11 @@
           <a href="#" class="link-arrow">learn more</a>
         </div>
       </article>
-    </section>
+    </div>
 
-    <section class="block container">
+    <div class="block container">
       <article class="grid grid--1x2 features--article">
-        <div class="feature__content">
+        <div class="feature__content" data-aos="fade-left">
           <span class="icon-container"
             ><svg class="icon">
               <use xlink:href="/images/sprite.svg#easy"></use>
@@ -221,7 +232,7 @@
           </p>
           <a href="#" class="link-arrow">learn more</a>
         </div>
-        <picture class="feature__content">
+        <picture class="feature__content" data-aos="fade-right">
           <source
             type="image/webp"
             srcset="images/wordpress.webp 1x, images/wordpress@2x.webp 2x"/>
@@ -232,16 +243,24 @@
           <img src="/images/wordpress.jpg" alt=""
         /></picture>
       </article>
-    </section>
+    </div>
 
-    <section class="block block--dark block--skewed-right">
-      <div class="showcase__heading">
+    <div class="block block--dark block--skewed-right">
+      <div
+        class="showcase__heading"
+        data-aos="fade"
+        data-aos-delay="500"
+        data-aos-duration="2000"
+      >
         <h2>User-Friendly Control Panel</h2>
       </div>
 
       <article>
         <div class="grid grid--1x2 grid__showcase">
           <picture
+            data-aos="fade-left"
+            data-aos-delay="50"
+            data-aos-duration="1000"
             ><img style="width: 100%" src="/images/ipad.png" alt=""
           /></picture>
           <div class="showcase__media">
@@ -252,8 +271,15 @@
                 </svg>
               </div>
               <div class="media__body">
-                <h3 class="media__title">Easy Start & Managed Updates</h3>
-                <p>
+                <h3
+                  class="media__title"
+                  data-aos="fade-right"
+                  data-aos-delay="50"
+                  data-aos-duration="2000"
+                >
+                  Easy Start & Managed Updates
+                </h3>
+                <p data-aos="fade" data-aos-delay="50" data-aos-duration="1000">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                   Illum perferendis vero vitae error cumque perspiciatis ut
                   assumenda fugit modi quidem.
@@ -267,8 +293,15 @@
                 </svg>
               </div>
               <div class="media__body">
-                <h3 class="media__title">Easy Start & Managed Updates</h3>
-                <p>
+                <h3
+                  class="media__title"
+                  data-aos="fade-right"
+                  data-aos-delay="50"
+                  data-aos-duration="2000"
+                >
+                  Easy Start & Managed Updates
+                </h3>
+                <p data-aos="fade" data-aos-delay="50" data-aos-duration="1000">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                   Illum perferendis vero vitae error cumque perspiciatis ut
                   assumenda fugit modi quidem.
@@ -282,8 +315,15 @@
                 </svg>
               </div>
               <div class="media__body">
-                <h3 class="media__title">Easy Start & Managed Updates</h3>
-                <p>
+                <h3
+                  class="media__title"
+                  data-aos="fade-right"
+                  data-aos-delay="50"
+                  data-aos-duration="2000"
+                >
+                  Easy Start & Managed Updates
+                </h3>
+                <p data-aos="fade" data-aos-delay="50" data-aos-duration="1000">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                   Illum perferendis vero vitae error cumque perspiciatis ut
                   assumenda fugit modi quidem.
@@ -293,9 +333,9 @@
           </div>
         </div>
       </article>
-    </section>
+    </div>
 
-    <section class="block">
+    <div class="block">
       <header class="block__header">
         <h2>What our Customers are Saying</h2>
         <p>
@@ -334,7 +374,7 @@
                   <div class="media__body">
                     <h3 class="media__title">John Smith</h3>
                     <p class="media__description">
-                      Captain & Lord of the Middle World
+                      Captain & Lord of the Under World
                     </p>
                   </div>
                 </div>
@@ -343,7 +383,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </div>
 
     <footer class="block block--dark footer">
       <div class="container grid footer__sections">
@@ -362,12 +402,11 @@
             </div>
           </div>
 
-          <header class="collapsible__header">
+          <div class="collapsible__header">
             <h2 class="collapsible__heading footer__heading">products</h2>
             <svg
               style="padding: 0.5rem 0.5rem"
               class="icon collapsible__chevron"
-              id="Layer_1"
               data-name="Layer 1"
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 51 51"
@@ -402,7 +441,7 @@
                 transform="translate(24 -21.9) rotate(37.3)"
               />
             </svg>
-          </header>
+          </div>
           <div class="collapsible__content">
             <ul class="list">
               <li>WordPress Hosting</li>
@@ -415,12 +454,11 @@
         </section>
 
         <section class="collapsible footer__section">
-          <header class="collapsible__header">
+          <div class="collapsible__header">
             <h2 class="collapsible__heading footer__heading">company</h2>
             <svg
               style="padding: 0.5rem 0.5rem"
               class="icon collapsible__chevron"
-              id="Layer_1"
               data-name="Layer 1"
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 51 51"
@@ -455,7 +493,7 @@
                 transform="translate(24 -21.9) rotate(37.3)"
               />
             </svg>
-          </header>
+          </div>
           <div class="collapsible__content">
             <ul class="list">
               <li>About</li>
@@ -470,12 +508,11 @@
         </section>
 
         <section class="collapsible footer__section">
-          <header class="collapsible__header">
+          <div class="collapsible__header">
             <h2 class="collapsible__heading footer__heading">support</h2>
             <svg
               style="padding: 0.5rem 0.5rem"
               class="icon collapsible__chevron"
-              id="Layer_1"
               data-name="Layer 1"
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 51 51"
@@ -510,7 +547,7 @@
                 transform="translate(24 -21.9) rotate(37.3)"
               />
             </svg>
-          </header>
+          </div>
           <div class="collapsible__content">
             <ul class="list">
               <li>Contact</li>
@@ -524,12 +561,11 @@
         </section>
 
         <section class="collapsible footer__section">
-          <header class="collapsible__header">
+          <div class="collapsible__header">
             <h2 class="collapsible__heading footer__heading">domains</h2>
             <svg
               style="padding: 0.5rem 0.5rem"
               class="icon collapsible__chevron"
-              id="Layer_1"
               data-name="Layer 1"
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 51 51"
@@ -564,7 +600,7 @@
                 transform="translate(24 -21.9) rotate(37.3)"
               />
             </svg>
-          </header>
+          </div>
           <div class="collapsible__content">
             <ul class="list">
               <li>Domain Checker</li>
@@ -576,13 +612,36 @@
           </div>
         </section>
 
-        <section class="footer__brand">
+        <div class="footer__brand">
           <img src="/images/logo.svg" alt="" />
           <p class="footer__copyright">Copyright 2020 Maximus Kent</p>
-        </section>
+        </div>
       </div>
     </footer>
 
     <script src="js/main.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init({
+        // Global settings:
+        disable: false, // accepts following values: 'phone', 'tablet', 'mobile', boolean, expression or function
+        startEvent: "DOMContentLoaded", // name of the event dispatched on the document, that AOS should initialize on
+        initClassName: "aos-init", // class applied after initialization
+        animatedClassName: "aos-animate", // class applied on animation
+        useClassNames: false, // if true, will add content of `data-aos` as classes on scroll
+        disableMutationObserver: false, // disables automatic mutations' detections (advanced)
+        debounceDelay: 50, // the delay on debounce used while resizing window (advanced)
+        throttleDelay: 99, // the delay on throttle used while scrolling the page (advanced)
+
+        // Settings that can be overridden on per-element basis, by `data-aos-*` attributes:
+        offset: 120, // offset (in px) from the original trigger point
+        delay: 0, // values from 0 to 3000, with step 50ms
+        duration: 400, // values from 0 to 3000, with step 50ms
+        easing: "ease", // default easing for AOS animations
+        once: false, // whether animation should happen only once - while scrolling down
+        mirror: false, // whether elements should animate out while scrolling past them
+        anchorPlacement: "top-bottom" // defines which position of the element regarding to window should trigger the animation
+      });
+    </script>
   </body>
 </html>
